--- a/source/sass/common/section-title.scss
+++ b/source/sass/common/section-title.scss
@@ -1,7 +1,8 @@
 .section-title {
   @include apply-styles($mobile-h3);
+
   font-family: "Alumni-Sans", "Arial", sans-serif;
-  color: $primary
+  color: $primary;
 }
 
 @media #{$not-mobile} {
