--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,20 +13,19 @@
 @import "./blocks/hero/hero-header";
 @import "./common/button";
 @import "./blocks/hero/promo-info";
-
 @import "./blocks/about/about";
 @import "./blocks/about/about-details";
 @import "./blocks/about/video";
-
 @import "./blocks/price/price";
 @import "./blocks/price/price-select";
 @import "./blocks/price/price-cards";
 @import "./blocks/price/price-card";
-
 @import "./blocks/games/games";
 @import "./blocks/games/games-promo";
-
 @import "./blocks/juri/juri";
-
 @import "./blocks/features/features";
 @import "./blocks/features/feature";
+@import "./blocks/offers/offers";
+@import "./blocks/offers/offer-link";
+@import "./blocks/offers/offer";
+@import "./blocks/offers/offers-list";
