--- a/source/sass/blocks/about/video.scss
+++ b/source/sass/blocks/about/video.scss
@@ -16,14 +16,14 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #14367A80;
+  background-color: rgba(20, 54, 122, 0.5);
 }
 
 .video__play-button {
   width: 72px;
   height: 72px;
   border-radius: 50%;
-  border: solid 2px #ED023320;
+  border: solid 2px rgba(237, 2, 51, 0.13);
   position: absolute;
   left: 50%;
   top: 50%;
@@ -49,13 +49,13 @@
     width: 52px;
     height: 52px;
     border-radius: 50%;
-    background: linear-gradient(to right,
-  #ED0233,
-  #003EB7);
+    background:
+      linear-gradient(to right,
+      #ed0233,
+      #003eb7);
   }
 
   &::after {
-    position: absolute;
     content: "";
     width: 9px;
     height: 12px;
@@ -68,15 +68,15 @@
   }
 
   &:hover {
-    border-color: #10265499;
+    border-color: rgba(16, 38, 84, 0.6);
   }
 
   &:hover::before {
     background: $white-primary;
   }
 
-  &:hover::after{
-    background: #10265499;
+  &:hover::after {
+    background: rgba(16, 38, 84, 0.6);
   }
 
   &:focus-visible {
@@ -85,10 +85,10 @@
   }
 
   &:focus-visible::before {
-    background: #C8C9CC;
+    background: #c8c9cc;
   }
 
-  &:focus-visible::after{
+  &:focus-visible::after {
     background: $primary;
   }
 
@@ -98,10 +98,10 @@
 
   &:active::before {
     background: $white-primary;
-    transform:  translate(-50%, -50%) scale(0.8056);
+    transform: translate(-50%, -50%) scale(0.81);
   }
 
-  &:active::after{
+  &:active::after {
     background: $primary;
   }
 }
@@ -144,14 +144,13 @@
     &::before {
       width: 72px;
       height: 72px;
-      transition:  transform 0.1s $smooth;
+      transition: transform 0.1s $smooth;
     }
 
     &::after {
       width: 17px;
       height: 17px;
       mask: url("/__spritemap#sprite-play-desktop-view") center center no-repeat;
-      mask-size: cover;
       mask-size: 17px 17px;
       background: $white-primary;
     }
