--- a/source/sass/blocks/price/price-card.scss
+++ b/source/sass/blocks/price/price-card.scss
@@ -14,7 +14,7 @@
     left: -7px;
     width: calc(100% + 14px);
     height: calc(100% + 14px);
-    background: linear-gradient(150deg, #D10A42, #00359F);
+    background: linear-gradient(150deg, #d10a42, #00359f);
     z-index: 0;
     transform: scaleX(0);
     transform-origin: right;
@@ -49,7 +49,7 @@
   }
 
   &:hover .price-card__buy-button:active {
-    color: #FFFFFF70;
+    color: rgba(255, 255, 255, 0.44);
   }
 
   &:hover::before {
@@ -80,16 +80,18 @@
   text-align: center;
   display: flex;
   flex-flow: wrap column;
-  gap: 18px
+  gap: 18px;
 }
 
 .price-card__title {
   @include apply-styles($mobile-h4);
+
   margin: 0;
 }
 
 .price-card__description {
   @include apply-styles($mobile-medium-text);
+
   margin: 0;
 }
 
@@ -107,7 +109,8 @@
 
 .price-card__price-shadow {
   @include apply-styles($mobile-numbers-xl);
-  color: #E8E8E8;
+
+  color: #e8e8e8;
   position: absolute;
   left: 22px;
 
@@ -118,6 +121,7 @@
 
 .price-card__price {
   @include apply-styles($mobile-numbers-medium);
+
   color: $secondary;
   z-index: 1;
   position: relative;
@@ -155,11 +159,13 @@
 
   .price-card__title {
     @include apply-styles($tablet-h4);
+
     margin: 0;
   }
 
   .price-card__description {
     @include apply-styles($universal-medium-text);
+
     margin: 0;
   }
 
@@ -201,6 +207,7 @@
 
   .price-card__title {
     @include apply-styles($desktop-h4);
+
     margin: 0;
   }
 
@@ -210,6 +217,7 @@
 
   .price-card__price-shadow {
     left: 13px;
+
     &--bigger {
       left: -20px;
     }
