--- a/source/sass/blocks/price/price-select.scss
+++ b/source/sass/blocks/price/price-select.scss
@@ -15,19 +15,20 @@
     content: "";
     width: 100%;
     height: 2px;
-    background-color: #78787833;
+    background-color: rgba(120, 120, 120, 0.2);
     bottom: 0;
   }
 }
 
 .price-select__title {
   margin: 0 0 30px;
-  text-align: center
+  text-align: center;
 }
 
 .price-select__option-button {
   @include apply-styles($mobile-tabs-lined);
-  color: #10265480;
+
+  color: rgba(16, 38, 84, 0.5);
   border: none;
   min-height: 26px;
   padding: 0;
@@ -49,7 +50,8 @@
   }
 
   &:hover:not(.price-select__option-button--active) {
-    color: #102654B2;
+    color: rgba(16, 38, 84, 0.7);
+
     &::after {
       background-color: #787878;
       transform: scaleX(1);
@@ -61,6 +63,7 @@
   &:focus-visible {
     color: $primary;
     outline: none;
+
     &::after {
       transform: scaleX(1);
       bottom: 0;
@@ -72,6 +75,7 @@
   &:disabled {
     color: $primary;
     opacity: 30%;
+
     &::after {
       background-color: $primary;
       transform: scaleX(1);
@@ -81,9 +85,10 @@
 
   &--active {
     color: $primary;
+
     &::after {
       transform: scaleX(1);
-      background-color: #D10A42;
+      background-color: #d10a42;
       bottom: 0;
     }
   }
@@ -95,12 +100,14 @@
   }
 
   .price-select__title {
-    margin:  0 0 35px;
+    margin: 0 0 35px;
+
     @include apply-styles($tablet-h3);
   }
 
   .price-select__option-button {
     min-height: 28px;
+
     @include apply-styles($tablet-tabs-lined);
   }
 
@@ -115,12 +122,14 @@
   }
 
   .price-select__title {
-    margin:  0 0 20px;
+    margin: 0 0 20px;
+
     @include apply-styles($desktop-h3);
   }
 
   .price-select__option-button {
     min-height: 30px;
+
     @include apply-styles($desktop-tabs-lined);
   }
 
