--- a/source/sass/blocks/price/price.scss
+++ b/source/sass/blocks/price/price.scss
@@ -3,7 +3,7 @@
 }
 
 .price__price-wrapper {
-  padding: 40px 0 40px;
+  padding: 40px 0;
 }
 
 @media #{$not-mobile} {
@@ -18,7 +18,7 @@
       background-image: url("../../../img/price/plates-tablet@1x.webp");
     }
 
-    @media (min-resolution: 2dppx) {
+    @media (resolution >= 2dppx) {
       background-image: url("../../../img/price/plates-tablet@2x.png");
 
       @supports (background-image: url("../../../img/price/plates-tablet@2x.webp")) {
@@ -31,7 +31,7 @@
     display: flex;
     flex-flow: wrap column;
     align-items: center;
-    padding: 60px 0 60px;
+    padding: 60px 0;
   }
 }
 
@@ -44,7 +44,7 @@
       background-image: url("../../../img/price/plates-desktop@1x.webp");
     }
 
-    @media (min-resolution: 2dppx) {
+    @media (resolution >= 2dppx) {
       background-image: url("../../../img/price/plates-desktop@2x.png");
 
       @supports (background-image: url("../../../img/price/plates-desktop@2x.webp")) {
@@ -54,6 +54,6 @@
   }
 
   .price__price-wrapper {
-    padding: 100px 0 100px;
+    padding: 100px 0;
   }
 }
