--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,6 +8,8 @@
 @import "./common/section-title";
 @import "./common/sub-title";
 @import "./common/swiper-button";
+@import "./common/button-link";
+
 @import "./blocks/hero/hero";
 @import "./blocks/hero/promo";
 @import "./blocks/hero/hero-header";
