--- a/source/sass/blocks/offers/offer-link.scss
+++ b/source/sass/blocks/offers/offer-link.scss
@@ -2,11 +2,29 @@
   @include apply-styles($desktop-button-large);
 
   color: $secondary-button;
-  min-height: 20px;
-  text-underline-offset: 8px;
+
+  // min-height: 20px;
   display: inline-block;
+  position: relative;
+  min-width: 73px;
+  text-decoration: none;
+  padding: 0 0 6px;
+
+  &::after {
+    position: absolute;
+    content: "";
+    height: 1px;
+    width: 100%;
+    background-color: #74819c;
+    left: 0;
+    bottom: 0;
+  }
 
   &--main {
     color: $white-primary;
+  }
+
+  &--main::after {
+    background-color: $white-primary;
   }
 }
