--- a/source/sass/blocks/offers/offers-list.scss
+++ b/source/sass/blocks/offers/offers-list.scss
@@ -17,7 +17,7 @@
 @media #{$desktop-only} {
   .offers-list {
     display: grid;
-    align-items: end;
+    align-items: start;
     grid-template-columns: 1fr 1fr;
     gap: 30px 40px;
   }
