--- a/source/sass/blocks/price/price-card.scss
+++ b/source/sass/blocks/price/price-card.scss
@@ -39,24 +39,35 @@
     border-color: transparent;
   }
 
-  &:hover .price-card__buy-button::after {
+  &:hover .price-card__buy-link::after {
     transform: scaleX(1);
   }
+  // &:hover .price-card__buy-button::after {
+  //   transform: scaleX(1);
+  // }
 
-  &:hover .price-card__buy-button {
+  &:hover .price-card__buy-link {
     color: $white-primary;
     border-color: transparent;
   }
 
-  &:hover .price-card__buy-button:active {
+  // &:hover .price-card__buy-button:active {
+  //   color: rgba(255, 255, 255, 0.44);
+  // }
+
+
+  &:hover .price-card__buy-link:active {
     color: rgba(255, 255, 255, 0.44);
   }
+
+
 
   &:hover::before {
     transform: scaleX(1);
   }
 
   .price-card__buy-button {
+    padding: 0;
     &.price-card__buy-button:disabled {
       background: $white-primary;
       color: $primary;
@@ -69,6 +80,29 @@
       }
     }
   }
+}
+
+.price-card__buy-button:disabled {
+  .price-card__buy-link {
+    border: solid 2px $primary;
+    opacity: 30%;
+  }
+
+  .price-card__buy-link::after {
+    transform: scaleX(0);
+  }
+}
+
+.price-card__buy-link {
+  text-decoration: none;
+  color: $primary;
+  padding: 20px 30px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: color 0.3s $smooth, border 0.3s $smooth;
 }
 
 .price-card__price-card-content {
@@ -177,7 +211,6 @@
     @include apply-styles($universal-numbers-medium);
 
     &::after {
-      // background-position: center -26px;
       background-image: url("../../__spritemap#sprite-rouble-desktop-view");
       background-position: center center;
       background-repeat: no-repeat;
