--- a/source/sass/blocks/price/price-card.scss
+++ b/source/sass/blocks/price/price-card.scss
@@ -39,71 +39,36 @@
     border-color: transparent;
   }
 
-  &:hover .price-card__buy-link::after {
+  &:hover .price-card__buy-button::after {
     transform: scaleX(1);
   }
-  // &:hover .price-card__buy-button::after {
-  //   transform: scaleX(1);
-  // }
 
-  &:hover .price-card__buy-link {
+  &:hover .price-card__buy-button {
     color: $white-primary;
     border-color: transparent;
   }
 
-  // &:hover .price-card__buy-button:active {
-  //   color: rgba(255, 255, 255, 0.44);
-  // }
-
-
-  &:hover .price-card__buy-link:active {
+  &:hover .price-card__buy-button:active {
     color: rgba(255, 255, 255, 0.44);
   }
-
-
 
   &:hover::before {
     transform: scaleX(1);
   }
 
-  .price-card__buy-button {
-    padding: 0;
-    &.price-card__buy-button:disabled {
-      background: $white-primary;
-      color: $primary;
-      opacity: 30%;
-      border-color: $primary;
-      cursor: auto;
-
-      &::after {
-        transform: scaleX(0);
-      }
-    }
-  }
-}
-
-.price-card__buy-button:disabled {
-  .price-card__buy-link {
-    border: solid 2px $primary;
+  .price-card__buy-button.button--button-primary-disabled {
+    background: $white-primary;
+    color: $primary;
     opacity: 30%;
+    border-color: $primary;
+    cursor: auto;
   }
 
-  .price-card__buy-link::after {
+  .price-card__buy-button.button--button-primary-disabled::after {
     transform: scaleX(0);
   }
 }
 
-.price-card__buy-link {
-  text-decoration: none;
-  color: $primary;
-  padding: 20px 30px;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: color 0.3s $smooth, border 0.3s $smooth;
-}
 
 .price-card__price-card-content {
   position: relative;
