--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -29,3 +29,9 @@
 @import "./blocks/offers/offer-link";
 @import "./blocks/offers/offer";
 @import "./blocks/offers/offers-list";
+
+@import "./blocks/faq/faq";
+@import "./blocks/faq/faq-tabs";
+@import "./blocks/faq/faq-tab";
+@import "./blocks/faq/faq-accordeon";
+@import "./blocks/faq/accordeon-item";
