--- a/source/sass/blocks/faq/faq-tabs.scss
+++ b/source/sass/blocks/faq/faq-tabs.scss
@@ -6,3 +6,16 @@
   grid-template-columns: 1fr 1fr;
   gap: 10px;
 }
+
+@media #{$not-mobile} {
+  .faq-tabs {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media #{$desktop-only} {
+  .faq-tabs {
+    display: flex;
+    flex-flow: column wrap;
+  }
+}
