--- a/source/sass/blocks/features/feature.scss
+++ b/source/sass/blocks/features/feature.scss
@@ -156,15 +156,11 @@
     min-height: 110px;
     justify-content: space-between;
     position: relative;
+    grid-column: 1/2;
+    grid-row: span 1;
 
-    &:not(:first-child)::after {
-      position: absolute;
-      content: "";
-      width: 100%;
-      height: 2px;
-      background-color: rgba(209, 10, 66, 0.2);
-      top: -40px;
-      left: 0;
+    &--aside {
+      grid-column: 3/4;
     }
 
     div {
@@ -177,6 +173,17 @@
     }
   }
 
+  .feature:not(:first-of-type):not(:nth-of-type(2)):not(:nth-of-type(3))::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 2px;
+    background-color: rgba(209, 10, 66, 0.2);
+    top: -40px;
+    left: 0;
+  }
+
+
   .feature--central {
     min-height: 300px;
     justify-content: center;
@@ -188,6 +195,8 @@
     width: 360px;
     margin: 0;
     display: flex;
+    grid-column: 2/3;
+    grid-row: span 2;
 
     &:not(:first-child)::after {
       // background-color: transparent;
