--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -34,3 +34,9 @@
 @import "./blocks/faq/faq-tab";
 @import "./blocks/faq/faq-accordeon";
 @import "./blocks/faq/accordeon-item";
+
+@import "./blocks/reviews/reviews";
+@import "./blocks/form/form";
+@import "./blocks/form/apply";
+@import "./blocks/form/contacts";
+@import "./blocks/form/contact";
