--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -40,3 +40,7 @@
 @import "./blocks/form/apply";
 @import "./blocks/form/contacts";
 @import "./blocks/form/contact";
+
+@import "./blocks/footer/footer";
+@import "./blocks/footer/footer-nav";
+@import "./blocks/footer/socials";
