fixed overflow issues

--- a/source/sass/blocks/offers/offer.scss
+++ b/source/sass/blocks/offers/offer.scss
@@ -198,12 +198,12 @@
     }
 
     ::-webkit-scrollbar-thumb {
-      background: #888888; /* Цвет ползунка скроллбара */
-      border-radius: 10px; /* Радиус ползунка */
+      background: #888888;
+      border-radius: 10px;
     }
 
     ::-webkit-scrollbar-thumb:hover {
-      background: #555555; /* Цвет ползунка при наведении */
+      background: #555555;
     }
 
     h3 {
